--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
   </head>
 
-  <body>
-    
+  <body ng-app="MushroomApp">
+    <div class="container">
+      <div class="row">
+
+      </div>
+    </div>
 
 
     <!-- vender files -->
@@ -17,6 +21,12 @@
     <script type="text/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js">
     </script>
     <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
-     <script type="text/javascript" src="lib/bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="lib/bower_components/angular-route/angular-route.min.js"></script>
+
+    <!-- app -->
+    <script type="text/javascript" src="app/app.js"></script>
+    <!-- controllers -->
+    <script type="text/javascript" src="app/controllers/LoadDataCtrl.js"></script>
+
   </body>
 </html>
