--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
   </head>
 
   <body ng-app="MushroomApp">
+    
     <div class="container">
-      <div class="row">
-        
-      </div>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              Mushroom App
+            </a>
+          </div>
+        </div>
+      </nav>
     </div>
+
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for...">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">Go!</button>
+            </span>
+          </div>
+          <label class="radio-inline"><input type="radio" name="optradio">Poisonous</label>
+          <label class="radio-inline"><input type="radio" name="optradio">Non-poisonous</label>
+        </div>
+      </div>
+
+
 
 
     <!-- vender files -->
