--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body ng-app="MushroomApp">
-    
+
     <div class="container">
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -22,19 +22,29 @@
       </nav>
     </div>
 
+    <div  ng-controller="LoadDataCtrl" >
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Go!</button>
-            </span>
+            <input type="text" class="form-control" placeholder="Search for..." ng-model="search">
+            <!-- <span class="input-group-btn">
+            </span> -->
           </div>
-          <label class="radio-inline"><input type="radio" name="optradio">Poisonous</label>
-          <label class="radio-inline"><input type="radio" name="optradio">Non-poisonous</label>
+          <label class="radio-inline"><input type="radio" name="optradio" ng-click="poisonousMushrooms(mushrooms)">Poisonous</label>
+          <label class="radio-inline"><input type="radio" name="optradio" ng-click="edibleMushrooms(mushrooms)">Non-poisonous</label>
         </div>
       </div>
-
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+        </div>
+        <div class="col-md-6 col-md-offset-3" ng-repeat="mushroom in mushrooms | filter: {name : search}">
+          <h1>{{mushroom.name.toUpperCase()}}</h1>
+          <h4>{{mushroom.edible}}</h4>
+          <p>{{mushroom.description}}</p>
+          <hr/>
+        </div>
+      </div>
+    </div>
 
 
 
@@ -49,6 +59,8 @@
     <script type="text/javascript" src="app/app.js"></script>
     <!-- controllers -->
     <script type="text/javascript" src="app/controllers/LoadDataCtrl.js"></script>
+    <!-- factories -->
+    <script type="text/javascript" src="app/factories/MushroomStorage.js"></script>
 
   </body>
 </html>
